--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
-    "mongoose": "^5.0.17"
+    "jsonwebtoken": "^8.2.1",
+    "mongoose": "^5.0.17",
+    "mongoose-unique-validator": "^2.0.1"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
