--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "author": "Students",
   "license": "ISC",
   "dependencies": {
+    "@uirouter/angularjs": "^1.0.15",
     "angular": "^1.6.0",
     "bcrypt": "^2.0.1",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
+    "bulma": "^0.7.1",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.2.1",
     "moment": "^2.22.1",
